--- a/src/tailwind/tailwind.css
+++ b/src/tailwind/tailwind.css
@@ -4,5 +4,6 @@
 
 :root {
     --bgDark: #121212;
-    --bgLight: #fafafa;
+    --bgLight: #F0E7DB;
+    --blurple: #736CED;
 }
